Fix light theme header on mobile (#29809)

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2899,7 +2899,7 @@ $ui-header-logo-wordmark-width: 99px;
   .layout-single-column {
     .ui__header {
       display: flex;
-      background: var(--background-color-tint);
+      background: var(--background-color);
       border-bottom: 1px solid var(--background-border-color);
     }
 
